option to ignore files written by first process

--- a/examples/common/Makefile
+++ b/examples/common/Makefile
@@ -27,7 +27,7 @@ record: dirs
 	reprozip trace --overwrite ./run.sh
 
 extract: dirs
-	rpz2prolog -m .reprozip-trace > facts/rpz_facts.pl
+	rpz2prolog -m -i .reprozip-trace > facts/rpz_facts.pl
 
 graph: dirs $(GRAPHS)
 
