refactored common Makefile

--- a/examples/common/Makefile
+++ b/examples/common/Makefile
@@ -1,15 +1,21 @@
+BIN_DIR=bin
+FACTS_DIR=facts
+OUTPUTS_DIR=outputs
+GRAPHS_DIR=graphs
 
-RPZ_RUN_AND_IO_FILES=graphs/rpz_A_run_with_input_and_output_files
-RPZ_IO_FILES=graphs/rpz_B_run_processes_with_input_and_output_files
-RPZ_NO_PACKAGES=graphs/rpz_C_run_processes_with_nonpackage_files
-RPZ_PACKAGES=graphs/rpz_D_run_processes_with_nonpackage_files_and_packages
-RPZ_PACKAGE_CONTENTS=graphs/rpz_E_run_processes_with_all_files_and_packages
+DIRS=$(BIN_DIR) $(FACTS_DIR) $(OUTPUTS_DIR) $(GRAPHS_DIR)
 
-RPZ_GRAPHS=$(RPZ_RUN_AND_IO_FILES).dot	\
-           $(RPZ_IO_FILES).dot			\
-		   $(RPZ_NO_PACKAGES).dot		\
-		   $(RPZ_PACKAGES).dot			\
-		   $(RPZ_PACKAGE_CONTENTS).dot
+RPZ_RUN_IO_FILES=$(GRAPHS_DIR)/rpz_A_run_with_input_and_output_files
+RPZ_PROCESSES_IO_FILES=$(GRAPHS_DIR)/rpz_B_processes_with_input_and_output_files
+RPZ_PROCESSES_NONPACKAGE_FILES=$(GRAPHS_DIR)/rpz_C_processes_with_nonpackage_files
+RPZ_PROCESSES_NONPACKAGE_FILES_PACKAGES=$(GRAPHS_DIR)/rpz_D_processes_with_nonpackage_files_and_packages
+RPZ_PROCESSES_FILES_PACKAGES=$(GRAPHS_DIR)/rpz_E_processes_with_all_files_and_packages
+
+RPZ_GRAPHS=$(RPZ_RUN_IO_FILES).dot							\
+           $(RPZ_PROCESSES_IO_FILES).dot					\
+		   $(RPZ_PROCESSES_NONPACKAGE_FILES).dot			\
+		   $(RPZ_PROCESSES_NONPACKAGE_FILES_PACKAGES).dot	\
+		   $(RPZ_PROCESSES_FILES_PACKAGES).dot
 
 GRAPHS=$(RPZ_GRAPHS)
 PNGS = $(GRAPHS:.dot=.png)
@@ -19,49 +25,44 @@ PNGS = $(GRAPHS:.dot=.png)
 
 all:  build record extract png
 
-.PHONY: clean
 clean:
-	rm -rfv bin outputs .reprozip-trace facts graphs
+	rm -rfv $(DIRS) .reprozip-trace
 
-build:
+$(DIRS):
+	mkdir -p $@
 
-.PHONY: dirs
-dirs:
-	mkdir -p  bin facts outputs graphs
+build: $(BIN_DIR)
 
-.PHONY: run
-run: dirs
+run: $(OUTPUTS_DIR)
 	./run.sh
 
-record: dirs
+record: build $(OUTPUTS_DIR)
 	reprozip trace --overwrite ./run.sh
 
-extract: dirs
-	rpz2prolog -m -i .reprozip-trace > facts/rpz_facts.pl
+extract: $(FACTS_DIR)
+	rpz2prolog -m -i .reprozip-trace > $(FACTS_DIR)/rpz_facts.pl
 
 graph: $(GRAPHS)
 
-$(RPZ_RUN_AND_IO_FILES).dot:
+$(RPZ_RUN_IO_FILES).dot: $(GRAPHS_DIR)
 	rm -fv $@
 	reprounzip graph --processes run --packages drop --otherfiles io $@
 
-$(RPZ_IO_FILES).dot:
+$(RPZ_PROCESSES_IO_FILES).dot:  $(GRAPHS_DIR)
 	rm -fv $@
 	reprounzip graph --processes process --packages drop --otherfiles io $@
 
-$(RPZ_NO_PACKAGES).dot:
+$(RPZ_PROCESSES_NONPACKAGE_FILES).dot: $(GRAPHS_DIR)
 	rm -fv $@
 	reprounzip graph --processes process --packages drop $@
 
-$(RPZ_PACKAGES).dot:
+$(RPZ_PROCESSES_NONPACKAGE_FILES_PACKAGES).dot: $(GRAPHS_DIR)
 	rm -fv $@
 	reprounzip graph --packages package --processes process $@
 
-$(RPZ_PACKAGE_CONTENTS).dot:
+$(RPZ_PROCESSES_FILES_PACKAGES).dot: $(GRAPHS_DIR)
 	rm -fv $@
 	reprounzip graph --processes process $@
-
-
 
 .dot.png:
 	dot -Tpng $*.dot -o $*.png
