Use XSB to create views of RPZ facts

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -9,6 +9,7 @@ all:
 	done
 
 clean:
+	rm -rfv common/rules/*.xwam
 	for dir in $(EXAMPLE_DIRS); do \
 		echo; \
 		echo "------- Cleaning example $$dir ----------------" ; \
