--- a/examples/common/Makefile
+++ b/examples/common/Makefile
@@ -29,9 +29,14 @@ RPZ_GRAPHS=$(RPZ_RUN_IO_FILES).dot							\
 		   $(RPZ_PROCESSES_NONPACKAGE_FILES_PACKAGES).dot	\
 		   $(RPZ_PROCESSES_FILES_PACKAGES).dot
 
+WT_GRAPH_RUN_INPUTS_OUTPUTS=$(GRAPHS_DIR)/wt_run_inputs_outputs
+
+WT_GRAPHS=$(WT_GRAPH_RUN_INPUTS_OUTPUTS).dot
+
+
 FACTS=$(RPZ_FACTS)
 VIEWS=$(RPZ_VIEWS)
-GRAPHS=$(RPZ_GRAPHS)
+GRAPHS=$(RPZ_GRAPHS) $(WT_GRAPHS)
 PNGS = $(GRAPHS:.dot=.png)
 
 .SUFFIXES:
@@ -93,4 +98,7 @@ $(RPZ_PROCESSES_NONPACKAGE_FILES_PACKAGES).dot: $(RPZ_TRACE) $(GRAPHS_DIR)
 $(RPZ_PROCESSES_FILES_PACKAGES).dot: $(RPZ_TRACE) $(GRAPHS_DIR)
 	rm -fv $@
 	reprounzip graph --processes process $@
+
+$(WT_GRAPH_RUN_INPUTS_OUTPUTS).dot: $(RPZ_FACTS) $(GRAPHS_DIR)
+	bash $(SCRIPTS_DIR)/graph_run_inputs_outputs.sh > $@
 
