--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,8 @@ charset = utf-8
 tab_width = 4
 indent_size = 4
 indent_style = tab
+
+[Makefile]
+tab_width = 4
+indent_size = 4
+indent_style = tab
