Added query of direct dependency

--- a/examples/08-branched-pipeline/Makefile
+++ b/examples/08-branched-pipeline/Makefile
@@ -1,2 +1,6 @@
+
+DIRECT_DEPENDENCY_QUERIES_RESOURCE = ./temp/t12.txt
+OUTPUT_LINEAGE_QUERIES_RESOURCE = ./outputs/o12.txt
+
 include ../common/Makefile
 
