Added query of direct downstream dependencies

--- a/examples/05-cat-file-to-file/Makefile
+++ b/examples/05-cat-file-to-file/Makefile
@@ -1,2 +1,5 @@
+QUERY_DIRECT_DEPENDENCIES_ARG = ./inputs/input.txt
+QUERY_OUTPUT_LINEAGES_ARG = ./outputs/output.txt
+
 include ../common/Makefile
 
