Renamed prov directories

--- a/examples/common/Makefile
+++ b/examples/common/Makefile
@@ -7,10 +7,10 @@ FACTS_DIR=facts
 OUTPUTS_DIR=outputs
 QUERIES_DIR=queries
 GRAPHS_DIR=graphs
-PROV_DIR=provone
+PROV_DIR=reports.prov
 TEMP_DIR=temp
 
-DIRS=$(BIN_DIR) $(OUTPUTS_DIR) $(RPZ_TRACE_DIR) $(FACTS_DIR) $(PROV_DIR) $(QUERIES_DIR) $(GRAPHS_DIR) $(TEMP_DIR)
+DIRS=$(BIN_DIR) $(OUTPUTS_DIR) provone $(RPZ_TRACE_DIR) $(FACTS_DIR) $(PROV_DIR) $(QUERIES_DIR) $(GRAPHS_DIR) $(TEMP_DIR)
 
 RPZ_TRACE_SQLITE=$(RPZ_TRACE_DIR)/trace.sqlite3
 RPZ_TRACE_YAML=$(RPZ_TRACE_DIR)/config.yml
