renamed run.json to prov_run.json

--- a/examples/common/Makefile
+++ b/examples/common/Makefile
@@ -53,8 +53,7 @@ WT_GRAPH_PROCESS_AND_DATA_FILES=$(GRAPHS_DIR)/wt_processes_and_data_files
 WT_GRAPHS=$(WT_GRAPH_RUN_INPUTS_OUTPUTS).dot		\
           $(WT_GRAPH_PROCESS_AND_DATA_FILES).dot
 
-PROV_RUN_JSON=$(PROV_DIR)/run.json
-
+PROV_RUN_JSON=$(PROV_DIR)/prov_run.json
 PROV=$(PROV_RUN_JSON)
 
 FACTS=$(WT_FACTS) $(RPZ_FACTS)
