Add blazegraph instance to REPRO

--- a/repro.config
+++ b/repro.config
@@ -4,7 +4,7 @@ REPRO_DOCKER_ORG=cirss
 REPRO_IMAGE_TAG=latest
 REPRO_EXAMPLES=examples
 REPRO_CODE=go
-REPRO_DOCKER_OPTIONS=--cap-add=SYS_PTRACE
+REPRO_DOCKER_OPTIONS=-p 9999:9999 --cap-add=SYS_PTRACE
 
 # Define target aliases available both inside and outside a running REPRO
 examples: run-examples  ## Run all of the examples
