--- a/.editorconfig
+++ b/.editorconfig
@@ -3,16 +3,16 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
-trim_trailing_whitespace = true
+trim_trailing_whitespace = false
 charset = utf-8
+
+[Makefile*]
+tab_width = 4
+indent_size = 4
+indent_style = tab
 
 [*.go]
 tab_width = 4
 indent_size = 4
 indent_style = tab
-
-[Makefile]
-tab_width = 4
-indent_size = 4
-indent_style = tab
-trim_trailing_whitespace = false
+trim_trailing_whitespace = true
