--- a/Makefile-go
+++ b/Makefile-go
@@ -10,7 +10,7 @@ purge: clean
 depend:
 	go mod tidy
 
-build:
+build: depend
 	go build ./...
 
 # disable test result caching using: -count 1
@@ -18,7 +18,7 @@ build:
 test: build
 	go test ./... -count 1 -p 1
 
-install:
+install: build
 	go install ./...   
 
 package: install
